k3s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roulette-backend
spec:
  selector:
    matchLabels:
      app: roulette-backend
  template:
    metadata:
      labels:
        app: roulette-backend
    spec:
      containers:
      - name: roulette-backend
        image: euclidesalgartelecom/roulette-backend:v1.0.0 # A imagem que você está tentando buildar
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: roulette-backend
spec:
  selector:
    app: roulette-backend
  ports:
  - port: 8000
    targetPort: 8000
