k3s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roulette-frontend
spec:
  selector:
    matchLabels:
      app: roulette-frontend
  template:
    metadata:
      labels:
        app: roulette-frontend
    spec:
      containers:
      - name: roulette-frontend
        image: euclidesalgartelecom/roulette-frontend:v1.0.0 # Ajuste se o nome no DockerHub for outro
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: roulette-frontend
spec:
  selector:
    app: roulette-frontend
  ports:
  - port: 80
    targetPort: 80
